fixing border spacing in pills, set to 8px

--- a/css/borders.css
+++ b/css/borders.css
@@ -15,7 +15,7 @@
 //Category Split CSS
 //add space between categories
 .topic-list.categories{  
-      border-spacing: 0 1em;
+      border-spacing: 0 8px;
       border-collapse: separate;
       border-top: 2px solid #202020;
 }
